# resonance-j2-eil

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  Snakefile  pyproject.toml
.github/workflows/: ci.yml
config/: ablation.yaml  az_ga_angles.yaml  az_ga_rf.yaml  az_ss_at.yaml  az_ss_ei.yaml  az_ss_pc.yaml  ci_mini.yaml  full.yaml  full_a_lqr_mpc.yaml  full_b_impulsive.yaml  screening.yaml
data/drift/: contour.parquet  drift_rates.parquet
data/full/: controller-impulsive_family-along_track_filter_model-gim_alfriend_meas_kind-angles_meas_sigma-0.000242_size-1000_04d09322.parquet  controller-impulsive_family-along_track_filter_model-gim_alfriend_meas_kind-angles_meas_sigma-0.000485_size-1000_880414fd.parquet  controller-impulsive_family-along_track_filter_model-gim_alfriend_meas_kind-angles_meas_sigma-2.42e-05_size-1000_6751fd54.parquet  controller-impulsive_family-along_track_filter_model-gim_alfriend_meas_kind-angles_meas_sigma-4.85e-05_size-1000_550e9d03.parquet  controller-impulsive_family-along_track_filter_model-gim_alfriend_meas_kind-cdgps_meas_sigma-0.005_size-1000_f5ba2490.parquet  controller-impulsive_family-along_track_filter_model-gim_alfriend_meas_kind-cdgps_meas_sigma-0.01_size-1000_e34707e9.parquet  (+274 more)
docs/: SESSION_NOTES.md  session-chat-log.jsonl
paper/: main.tex  references.bib
scripts/: calibrate_q.py  crossvalidate_orekit.py  find_knees.py  make_all.py  run_drift.py  run_perfect_state.py  run_validation.py
tests/: test_brouwer.py  test_closed_loop.py  test_controllers.py  test_cw.py  test_elements.py  test_filters.py  test_gim_alfriend.py  test_gravity.py  test_kgd.py  test_roe_map.py  test_schweighart.py  test_truth_rk4.py
(+702 files in other folders)
