[project]
name = "eilj2"
version = "0.1.0"
description = "Estimation-in-the-loop J2 formation-keeping: Pareto characterization of relative-navigation accuracy versus delta-V cost"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "The Resonance Foundation" }]
keywords = [
    "spacecraft formation flying",
    "relative navigation",
    "Kalman filter",
    "J2 perturbation",
    "astrodynamics",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "joblib>=1.3",
    "pyyaml>=6.0",
    "casadi>=3.6.5",
]

[project.optional-dependencies]
# Independent cross-validation oracle (paper Table 2). Requires a JVM; jdk4py ships one.
validation = ["orekit-jpype>=13.0", "jdk4py>=17.0.7.0"]
# TLE-based initial conditions (optional; the study uses element-space ICs by default)
tle = ["sgp4>=2.23"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    # snakemake is used for the figure DAG on Linux/macOS/CI; on Windows use scripts/make_all.py
    "snakemake>=8.0 ; sys_platform != 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eilj2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running validation tests against the numerical truth propagator (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "NPY"]
ignore = ["E501"]
